# Meinkraft

./: .gitignore  CMakeLists.txt
content/: info.txt  test_sprite.xcf
include/: color.h  config.h.in  game.h  game_state.h  keyboard_handler.h  rect.h  renderer.h  sprite.h  sprite_sheet.h  state.h  window.h
include/entities/: entity.h  render_entity.h  renderable_entity.h
src/: color.cpp  game.cpp  game_state.cpp  main.cpp  renderer.cpp  sprite.cpp  sprite_sheet.cc  window.cpp
